Update chef_server_url to https and use the supplied api_fqdn

--- a/cookbooks/chef-server-demo/templates/default/knife.rb.erb
+++ b/cookbooks/chef-server-demo/templates/default/knife.rb.erb
@@ -5,4 +5,4 @@ node_name "admin"
 client_key "#{current_dir}/admin.pem"
 validation_client_name "chef-validator"
 validation_key "#{current_dir}/chef-validator.pem"
-chef_server_url "http://chefserver"
+chef_server_url "https://<%= node['chef-server']['api_fqdn']%>"
